<resources>
    <string name="app_name">Verse</string>
    <string name="verse">Verse</string>
<!--    <string name="status">Play a song on spotify</string>-->
<!--    <string name="Navbar__LogoDesc">flowerimg</string>-->
<!--    <string name="Navbar__Slogan">Lyrics for everyone!</string>-->
<!--    <string name="Navbar__Version">Ver. 4.0.0</string>-->
<!--    <string name="title_activity_main2">MainActivity2</string>-->
<!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
<!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
<!--    <string name="nav_header_title">Android Studio</string>-->
<!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
<!--    <string name="nav_header_desc">Navigation header</string>-->
<!--    <string name="action_settings">Settings</string>-->
<!--    <string name="mainActivity">Pause and Resume song to see effects</string>-->

<!--    <string name="menu_home">Home</string>-->
<!--    <string name="menu_gallery">Gallery</string>-->
<!--    <string name="menu_slideshow">Slideshow</string>-->
<!--    <string name="Navbar__Play">Play a Song</string>-->
<!--    <string name="Navbar__Help">Help</string>-->
<!--    <string name="Navbar__Theme">Theme</string>-->
<!--    <string name="Navbar__about">About</string>-->
<!--    <string name="Navbar__contact">Contact</string>-->
    <string name="Navbar__developer">Developer</string>

    <string name="Navbar__OpenSpotify">Open Spotify</string>
<!--    <string name="Navbar__BlockAd">Mute Ads</string>-->
<!--    <string name="Navbar__Help2">Help Me!</string>-->
<!--    <string name="Navbar__New">What\'s New?</string>-->
<!--    <string name="Navbar__Lightmode">Light Mode</string>-->
<!--    <string name="Navbar__About">About</string>-->
    <string name="Navbar__Rate">Rate app in Play Store</string>
<!--    <string name="Navbar__Github">Github</string>-->
<!--    <string name="Navbar__Font">Fonts</string>-->
    <string name="Navbar__Feedback">Feedback</string>
    <string name="Navbar__FeatureRequest">Feature Request</string>
<!--    <string name="Navbar__DevName">AB Santhosh</string>-->
<!--    <string name="Navbar__NormalLyric">Static Lyrics</string>-->
<!--    <string name="Navbar__SavedLyrics">Saved Lyrics</string>-->
<!--    <string name="Navbar__SyncLyric">Live Lyrics(Beta)</string>-->
    <string name="Navbar__Open">Navigation Drawer opened</string>
    <string name="Navbar__Close">Navigation Drawer Closed</string>

    <!--  General Fragment strings  -->
    <string name="Fragment__Border">Fragment Border</string>

    <!--  About Fragment  -->
    <string name="Fragment__About">About</string>
<!--    <string name="Fragment__About_C1">Verse basically automates the process of Googling the lyrics and shows this in a clean UI.\n\nIt uses the media feed from spotify to know what song is currently going on.\n\nI know ads are irritating but lately I\'ve been considering on showing few passive ads in the app. You can let me know how you feel about it through the feedback option. I\'ll make a decision based on your input.\n\nThanks for using Verse and If you have left a rating and a review on the PlayStore, I can\'t thank you enough. You made my day!</string>-->

    <!--  Whats new Fragment  -->
<!--    <string name="Fragment__New">What\'s New?</string>-->
<!--    <string name="Fragment__New__Content">Ver.4.0.0\n\n-Added fonts selector\n\n-Synced lyrics(Beta)\n\n-New Icon\n\n-New Ad muting mechanism\n\n-Save lyrics feature added(Only works while online)\n\n-New EasterEgg\n\n-Lyrics to more songs than before\n\nVer.3.2\n\n-UI tweaks\n\n-Open the identified song in spotify if available.\n\n-Removed the toast message for song name and added a new UI for the same.\n\nVer.3.1\n\n-Fixed some typos\n\n-Added toast message to \'Identify Song\' option to show song name when Verse is not open\n\nVer.3.0\n\n-Added \"what\'s new\" in navigation menu\n\n-Added \"Rate app in Playstore\" feature\n\n-Added \"System default\" theme option.\n\n-Added \"Identify Song\" feature\n\n-Fixed Ad Block\n\n-Fixed version notation to match playstore.\n\n-Fixed uncertainty in song name when switched between \"Identify song\" and \"Lyrics\" options.\n\n-UI fixes\n\n-Removed old ester egg and added a new one.\n\n\nVer.3.0.1\n-Fixed Shared preferences.</string>-->

    <!--  Sync lyrics Fragment  -->
<!--    <string name="Fragment__sync">Synced lyrics?</string>-->
<!--    <string name="Fragment__sync_H1">Help wanted</string>-->
<!--    <string name="Fragment__sync_C1">If you tried to use the Sync lyric(Beta) feature, you would have noticed that the timings are waay off sometimes and its perfect sometimes.\nThis is because of the delay between spotify\'s broadcast to verse, verse fetching the lyrics from api and calculating the song offset(the current playback position of the song). I know its possible but for now I\'m burnt out from re-writing the whole app to make the code maintainable and easily add features(It was a mess previously)\n\nSo if you are a dev and would like to work on this feature, Contact me through the \"Contact me\" feature.\n\nThanks for using Verse and all the reviews on playstore! </string>-->


    <!--  Mute Ads Fragment  -->
<!--    <string name="Fragment__BlockAd">Mute Ads</string>-->
<!--    <string name="Fragment__BlockAd_H1">How does is work?</string>-->
<!--    <string name="Fragment__BlockAd_C1">Using the spotify\'s Broadcast Verse calculates the time a song would play for and if there is no new next song while the song is not paused, It mutes the device until there\'s a new song.\n\nI would like to give shout out to oyvindsam\'s SpotMute app for all the core logic behind this function.\n If you don\'t need the lyrics functionality and only the Ad Mute with more customisations, Try SpotMute from playstore</string>-->
<!--    <string name="Fragment__BlockAd_B1">SpotMute</string>-->
<!--    <string name="Fragment__BlockAd_B2">Oyvindsam\'s GitHub</string>-->

    <!--  Font Selector Fragment  -->
<!--    <string name="Fragment__FontSelector">Font Selector</string>-->
<!--    <string name="Fragment__FontSelector_H1">Preview</string>-->
    <string name="Fragment__FontSelector_TestContent">Lorem ipsum dolor sit.</string>
<!--    <string name="Fragment__FontSelector_H2">Select a Font</string>-->
<!--    <string name="Fragment__FontSelector_B1">Set Font</string>-->
    <string name="Fragment__FontSelector_B2">Default</string>


    <!--  Help Me Fragment  -->
    <string name="Fragment__Help">Help</string>
    <string name="Fragment__Help_H1">Verse not detecting Spotify songs</string>
    <string name="Fragment__Help_C1">It\'s probably because you forgot to turn ON the Device Broadcast Status on the spotify app. </string>
    <string name="Fragment__Help_H2">Don\'t know how to use verse?</string>
    <string name="Fragment__Help_C2">Play a song on spotify, Open verse if you want to see the lyrics. Simple</string>
    <string name="Fragment__Help_H3">Only song name no lyrics?</string>
    <string name="Fragment__Help_C3">Even though google have lyrics to almost all the songs, There are no available lyrics for some songs. Unfortunately I can\'t do much in that case :(</string>

    <!--  FirstTime Fragment  -->
    <string name="Fragment__FirstTime">Set Up</string>
    <string name="Fragment__FirstTime_H1">Broadcast status</string>
    <string name="Fragment__FirstTime_C1">Verse detects the current playing song through Spotify\'s in-built Broadcast Status feature. Turn it on to start using Verse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="placeholder">Placeholder</string>
    <string name="main_savelyrics">Save Lyrics</string>
</resources>
